<?xml version="1.0"?>
<package format="2">
  <name>abb_irb5500_7axis_support</name>
  <version>1.3.1</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 5500 7 axis Varient.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 5500 manipulators. This currently includes the base model.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the ABB data sheets.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="aaryan.murgunde@gmail.com">Aaryan Murgunde</author>
  <maintainer email="aaryan.murgunde@gmail.com">Aaryan Murgunde</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
